--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: pnpm test:unit
       - run: pnpm test:type
-      - run: pnpm test:schema
 
   checks:
     runs-on: ubuntu-latest
@@ -47,7 +46,7 @@ jobs:
         uses: sap/cloud-sdk-js/.github/actions/check-public-api@main
         with:
           force_internal_exports: 'false'
-          ignored_path_pattern: '.*?/client/.*?/schema'
+          ignored_path_pattern: '.*?/client/.*?/schema|.*?/zod/.*?'
       - name: Check dependencies
         run: pnpm check:deps
       - name: License Check
