--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -17,10 +17,10 @@ jobs:
     outputs:
       version: ${{ steps.bump.outputs.version }}
     steps:
-      - uses: sap/ai-sdk-js/.github/actions/setup@main
+      - uses: sap/ai-sdk-js/.github/actions/setup@v1-main
         with:
           token: ${{ secrets.GH_CLOUD_SDK_JS_ADMIN_WRITE_TOKEN }}
-          ref: 'main'
+          ref: 'v1-main'
       - name: bump version
         uses: sap/cloud-sdk-js/.github/actions/changesets-fixed-version-bump@main
         id: bump
@@ -45,7 +45,7 @@ jobs:
       pr_url: ${{ steps.open_pr.outputs.pr_url }}
     steps:
       - name: Checkout current repository
-        uses: sap/ai-sdk-js/.github/actions/setup@main
+        uses: sap/ai-sdk-js/.github/actions/setup@v1-main
         with:
           node-version: ${{ env.NODE_VERSION }}
       - name: Checkout Docs Repo
