--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,9 +13,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "v1-main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "v1-main" ]
   schedule:
     - cron: '19 2 * * 4'
 
