--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
       release_notes_branch: ${{ steps.determine-branch-name.outputs.release_notes_branch }}
       is_merged: ${{ steps.check_pr_status.outputs.merged }}
     steps:
-      - uses: sap/ai-sdk-js/.github/actions/setup@main
+      - uses: sap/ai-sdk-js/.github/actions/setup@v1-main
         with:
           node-version: ${{ env.NODE_VERSION }}
       - name: Determine Docs PR Branch Name
@@ -59,7 +59,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [check-release-notes-pr]
     steps:
-      - uses: sap/ai-sdk-js/.github/actions/setup@main
+      - uses: sap/ai-sdk-js/.github/actions/setup@v1-main
         with:
           node-version: ${{ env.NODE_VERSION }}
       - name: publish
