--- a/sample-code/package.json
+++ b/sample-code/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@langchain/langgraph": "^0.3.11",
+    "@langchain/mcp-adapters": "^0.6.0",
+    "@modelcontextprotocol/sdk": "^1.13.1",
     "langchain": "0.3.30",
     "@langchain/core": "0.3.66",
     "@langchain/textsplitters": "0.1.0",
