--- a/sample-code/package.json
+++ b/sample-code/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "node --loader ts-node/esm src/server.ts",
     "local": "node --env-file=.env --loader ts-node/esm src/server.ts",
-    "agent-tutorial": "node --env-file=.env --loader ts-node/esm src/tutorials/agent-openai-langchain.ts",
+    "agent-tutorial": "node --env-file=.env --loader ts-node/esm src/tutorials/travel-itinerary-agent.ts",
     "compile": "tsc",
     "dev": "tsc -w",
     "lint": "eslint . && prettier . --config ../.prettierrc --ignore-path ../.prettierignore -c",
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@langchain/langgraph": "^0.4.2",
+    "@langchain/mcp-adapters": "^0.6.0",
+    "@modelcontextprotocol/sdk": "^1.13.1",
     "langchain": "0.3.30",
     "@langchain/core": "0.3.66",
     "@langchain/textsplitters": "0.1.0",
