--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,7 @@ version: 2
 updates:
   - package-ecosystem: npm
     directory: '/'
+    target-branch: 'main'
     schedule:
       interval: daily
       time: '01:00'
