--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -2,8 +2,9 @@ name: e2e tests
 
 on:
   workflow_dispatch:
+  workflow_call: 
   schedule:
-    - cron: 0 22 * * *
+    - cron: 0 22 * * * # Will only work after merge to default branch
 
 jobs:
   e2e-tests:
