--- a/sample-code/src/model-orchestration-config.json
+++ b/sample-code/src/model-orchestration-config.json
@@ -1,21 +1,23 @@
 {
-  "module_configurations": {
-    "llm_module_config": {
-      "model_name": "gpt-4o",
-      "model_params": {},
-      "model_version": "latest"
-    },
-    "templating_module_config": {
-      "template": [
-        {
-          "role": "user",
-          "content": "SAP"
-        },
-        {
-          "role": "system",
-          "content": "When given the name of a company, provide the year of it's establishment."
-        }
-      ]
+  "modules": {
+    "prompt_templating": {
+      "model": {
+        "name": "gpt-4o",
+        "params": {},
+        "version": "latest"
+      },
+      "prompt": {
+        "template": [
+          {
+            "role": "user",
+            "content": "SAP"
+          },
+          {
+            "role": "system",
+            "content": "When given the name of a company, provide the year of it's establishment."
+          }
+        ]
+      }
     }
   }
 }
