--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -1,21 +1,20 @@
-# Disable workflow until releasing v2
-# name: draft-release
+name: draft-release
 
-# on:
-#   push:
-#     tags: ['v*']
+on:
+  push:
+    tags: ['v*']
 
-# jobs:
-#   draft-github-release:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: sap/ai-sdk-js/.github/actions/setup@main
-#       - name: Get Changelog
-#         uses: sap/cloud-sdk-js/.github/actions/get-changelog@main
-#         id: get-changelog
-#       - uses: ncipollo/release-action@v1
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         with:
-#           draft: true
-#           body: ${{ steps.get-changelog.outputs.changelog }}
+jobs:
+  draft-github-release:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: sap/ai-sdk-js/.github/actions/setup@main
+      - name: Get Changelog
+        uses: sap/cloud-sdk-js/.github/actions/get-changelog@main
+        id: get-changelog
+      - uses: ncipollo/release-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          draft: true
+          body: ${{ steps.get-changelog.outputs.changelog }}
