--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -64,7 +64,7 @@ jobs:
           node-version: ${{ env.NODE_VERSION }}
       - name: publish
         run: |
-          pnpm changeset publish --tag next
+          pnpm changeset publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPMJS_ACCESS_TOKEN }}
 
