--- a/sample-code/package.json
+++ b/sample-code/package.json
@@ -31,6 +31,7 @@
     "@sap-ai-sdk/document-grounding": "workspace:^",
     "@sap-ai-sdk/foundation-models": "workspace:^",
     "@sap-ai-sdk/langchain": "workspace:^",
+    "@sap-ai-sdk/orchestration": "workspace:^",
     "@sap-ai-sdk/orchestration-v2": "workspace:^",
     "@sap-ai-sdk/prompt-registry": "workspace:^",
     "@sap-cloud-sdk/util": "^4.1.1",
