--- a/packages/langchain/package.json
+++ b/packages/langchain/package.json
@@ -31,6 +31,7 @@
     "@sap-ai-sdk/foundation-models": "workspace:^",
     "@sap-ai-sdk/orchestration": "workspace:^",
     "@sap-cloud-sdk/connectivity": "^4.1.1",
+    "@sap-cloud-sdk/util": "^4.1.1",
     "uuid": "^11.1.0",
     "@langchain/core": "0.3.68"
   }
