--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,8 @@ name: build
 on:
   push:
     branches: ['v1-main']
-  pull_request: ~
+  pull_request: 
+    branches: ['v1-main']
   workflow_dispatch: ~
 
 jobs:
