--- a/.github/workflows/delete-dist-tag.yml
+++ b/.github/workflows/delete-dist-tag.yml
@@ -24,5 +24,9 @@ jobs:
           npm dist-tag rm @sap-ai-sdk/ai-api ${{ inputs.tag }}
           npm dist-tag rm @sap-ai-sdk/foundation-models ${{ inputs.tag }}
           npm dist-tag rm @sap-ai-sdk/orchestration ${{ inputs.tag }}
+          npm dist-tag rm @sap-ai-sdk/core ${{ inputs.tag }}
+          npm dist-tag rm @sap-ai-sdk/document-grounding ${{ inputs.tag }}
+          npm dist-tag rm @sap-ai-sdk/langchain ${{ inputs.tag }}
+          npm dist-tag rm @sap-ai-sdk/prompt-registry ${{ inputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPMJS_ACCESS_TOKEN }}
