--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -32,5 +32,5 @@ jobs:
           payload: |
             {
               "username": "GitHub E2E Test Runner",
-              "text": "⚠️ Smoke Test Failed-v1 🚭! Please inspect & fix by clicking <https://github.com/SAP/ai-sdk-js/actions/runs/${{ github.run_id }}|here>"
+              "text": "⚠️ Smoke Test for v1 Failed 🚭! Please inspect & fix by clicking <https://github.com/SAP/ai-sdk-js/actions/runs/${{ github.run_id }}|here>"
             }
