--- a/.github/workflows/trigger-v1-tests.yml
+++ b/.github/workflows/trigger-v1-tests.yml
@@ -1,17 +1,18 @@
-name: 'Spec File Update Workflow (Cron Job)'
+name: trigger v1 tests
 
 on:
   schedule:
-    # At 03:21 on every 15th day-of-month from 1 through 31.
-    # Example:
-    #  2025-04-16 03:21:00
-    #  2025-05-01 03:21:00
-    #  2025-05-16 03:21:00
-    - cron: //Todo
+    # At 2 AM UTC every day
+    - cron: 0 2 * * *
 
 jobs:
   smoke-tests-v1:
     uses: SAP/ai-sdk-js/.github/workflows/smoke-tests.yaml@v1-main
+    with:
+      branch: v1-main
+    secrets: inherit
+  e2e-tests-v1:
+    uses: SAP/ai-sdk-js/.github/workflows/e2e-tests.yaml@v1-main
     with:
       branch: v1-main
     secrets: inherit
