--- a/.github/workflows/trigger-v1-tests.yml
+++ b/.github/workflows/trigger-v1-tests.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   smoke-tests-v1:
-    uses: SAP/ai-sdk-js/.github/workflows/smoke-tests.yaml@v1-main
+    uses: SAP/ai-sdk-js/.github/workflows/smoke-tests.yml@v1-main
     with:
       branch: v1-main
     secrets: inherit
