--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -2,14 +2,21 @@ name: smoke test
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: 0 2 * * *
+  workflow_call:
+    inputs:
+      branch:
+        description: 'Which branch to test'
+        required: true
+        type: string
+        default: 'v1-main'
 
 jobs:
   smoke-tests:
     runs-on: ubuntu-latest
     steps:
-      - uses: sap/ai-sdk-js/.github/actions/setup@v1.17.0
+      - uses: sap/ai-sdk-js/.github/actions/setup@v1-main
+        with:
+          ref: ${{ inputs.branch }}
       - run: pnpm smoke-tests create-deployment
       - uses: vchrisb/setup-cf@5aa69781ba95297cea2b80e71926198bed38ef5e
         with:
@@ -34,5 +41,5 @@ jobs:
           payload: |
             {
               "username": "GitHub E2E Test Runner",
-              "text": "⚠️ Smoke Test Failed 🚭! Please inspect & fix by clicking <https://github.com/SAP/ai-sdk-js/actions/runs/${{ github.run_id }}|here>"
+              "text": "⚠️ Smoke Test for v1 Failed 🚭! Please inspect & fix by clicking <https://github.com/SAP/ai-sdk-js/actions/runs/${{ github.run_id }}|here>"
             }
