--- a/.github/workflows/trigger-v1-canary.yml
+++ b/.github/workflows/trigger-v1-canary.yml
@@ -2,8 +2,8 @@ name: trigger v1 canary release
 
 on:
   schedule:
-    # At 3 AM UTC every day
-    - cron: 0 3 * * *
+    # At 3 AM UTC every Monday (weekly)
+    - cron: 0 3 * * 1
 
 jobs:
   canary-release:
