--- a/.github/workflows/trigger-v1-tests.yml
+++ b/.github/workflows/trigger-v1-tests.yml
@@ -2,8 +2,8 @@ name: trigger v1 tests
 
 on:
   schedule:
-    # At 4 AM UTC every day
-    - cron: 0 4 * * *
+    # At 4 AM UTC every Monday (weekly)
+    - cron: 0 4 * * 1
 
 jobs:
   smoke-tests-v1:
