--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -37,5 +37,5 @@ updates:
       time: '01:00'
       timezone: 'Europe/Berlin'
     ignore:
-    - dependency-name: '*'
+    - dependency-name: 'SAP/ai-sdk-js'
       update-types: ['version-update:semver-major', 'version-update:semver-minor', 'version-update:semver-patch']
