chore: Revert to v1-main tag

--- a/.github/workflows/trigger-v1-canary.yml
+++ b/.github/workflows/trigger-v1-canary.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   canary-release:
-    uses: SAP/ai-sdk-js/.github/workflows/publish-canary.yml@v1.17.0
+    uses: SAP/ai-sdk-js/.github/workflows/publish-canary.yml@v1-main
     with:
       branch: v1-main
     secrets: inherit
