--- a/.github/workflows/trigger-v1-canary.yml
+++ b/.github/workflows/trigger-v1-canary.yml
@@ -4,10 +4,11 @@ on:
   schedule:
     # At 3 AM UTC every Monday (weekly)
     - cron: 0 3 * * 1
+  workflow_dispatch:
 
 jobs:
   canary-release:
-    uses: SAP/ai-sdk-js/.github/workflows/publish-canary.yml@v1.17.0
+    uses: SAP/ai-sdk-js/.github/workflows/publish-canary.yml@v1-main
     with:
       branch: v1-main
     secrets: inherit
