--- a/.github/workflows/trigger-v1-tests.yml
+++ b/.github/workflows/trigger-v1-tests.yml
@@ -4,15 +4,16 @@ on:
   schedule:
     # At 4 AM UTC every Monday (weekly)
     - cron: 0 4 * * 1
+  workflow_dispatch:
 
 jobs:
   smoke-tests-v1:
-    uses: SAP/ai-sdk-js/.github/workflows/smoke-tests.yml@v1.17.0
+    uses: SAP/ai-sdk-js/.github/workflows/smoke-tests.yml@v1-main
     with:
       branch: v1-main
     secrets: inherit
   e2e-tests-v1:
-    uses: SAP/ai-sdk-js/.github/workflows/e2e-tests.yaml@v1.17.0
+    uses: SAP/ai-sdk-js/.github/workflows/e2e-tests.yaml@v1-main
     with:
       branch: v1-main
     secrets: inherit
