--- a/.github/workflows/spec-update.yaml
+++ b/.github/workflows/spec-update.yaml
@@ -57,13 +57,10 @@ jobs:
       CHOICE: ${{ inputs.file }}
       REF: ${{ inputs.file-ref }}
       CREATE_PR: ${{ inputs.create-pr }}
-    strategy:
-      matrix:
-        node-version: ${{ fromJSON(vars.SUPPORTED_NODE_VERSIONS) }}
     steps:
       - uses: sap/ai-sdk-js/.github/actions/setup@main
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ vars.DEFAULT_NODE_VERSION }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 'Checkout or Create Branch'
