--- a/.github/workflows/draft-release.yml
+++ b/.github/workflows/draft-release.yml
@@ -10,6 +10,8 @@
 #     runs-on: ubuntu-latest
 #     steps:
 #       - uses: sap/ai-sdk-js/.github/actions/setup@main
+#         with:
+#           node-version: ${{ vars.DEFAULT_NODE_VERSION }}
 #       - name: Get Changelog
 #         uses: sap/cloud-sdk-js/.github/actions/get-changelog@main
 #         id: get-changelog
