--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Set NODE_PATH
         run: echo "NODE_PATH=$(pwd)/node_modules" >> $GITHUB_ENV
       - name: Check public API
-        uses: sap/cloud-sdk-js/.github/actions/check-public-api@fix-default-node-version-with-vars
+        uses: sap/cloud-sdk-js/.github/actions/check-public-api@main
         with:
           force_internal_exports: 'false'
           ignored_path_pattern: '.*?/client/.*?/schema|.*?/zod/.*?'
