chore: add owasp dependency check

--- a/.github/workflows/fosstars.yml
+++ b/.github/workflows/fosstars.yml
@@ -6,14 +6,35 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-  fosstars-rating:
+  security-checks:
     runs-on: ubuntu-latest
     name: 'Security rating'
     steps:
-      - uses: actions/checkout@v5
-      - uses: SAP/fosstars-rating-core-action@v1.14.0
+      - uses: sap/ai-sdk-js/.github/actions/setup@main
         with:
           token: '${{ secrets.GH_CLOUD_SDK_JS_ADMIN_WRITE_TOKEN }}'
+      - name: 'Run Fosstars Rating'
+        uses: SAP/fosstars-rating-core-action@v1.14.0
+        with:
+          token: '${{ secrets.GH_CLOUD_SDK_JS_ADMIN_WRITE_TOKEN }}'
+      - name: 'Run OWASP Dependency Check'
+        uses: dependency-check/Dependency-Check_Action@main
+        id: depcheck
+        with:
+          project: ${{ github.repository }}
+          path: '.'
+          format: 'HTML'
+          out: 'reports'
+          args: >
+            --failOnCVSS 7
+            --pnpm pnpm
+            --nvdApiKey ${{ secrets.NVD_API_KEY }}
+      - name: 'Upload OWASP Dependency Check Report'
+        uses: actions/upload-artifact@v4
+        with:
+          name: owasp-dependency-check-report
+          path: reports/
+          retention-days: 7
       - name: 'Slack Notification'
         if: failure()
         uses: slackapi/slack-github-action@v2.1.1
@@ -22,7 +43,6 @@ jobs:
           webhook-type: incoming-webhook
           payload: |
             {
-              "username": "Fosstars Rating",
-              "text": "Fosstars rating <https://github.com/SAP/ai-sdk-js/actions/runs/${{ github.run_id }}|failed>.",
+              "username": "Security Checks",
+              "text": "Security checks (Fosstars rating and OWASP dependency check) <https://github.com/SAP/ai-sdk-js/actions/runs/${{ github.run_id }}|failed>.",
             }
-
