--- a/.github/workflows/publish-canary.yml
+++ b/.github/workflows/publish-canary.yml
@@ -9,7 +9,7 @@ on:
         description: 'Dist tag for the release. If you chose something different than "canary", make sure to delete it once it is not needed anymore.'
         type: string
         required: false
-        default: 'next'
+        default: 'canary'
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -23,35 +23,13 @@ jobs:
       - name: prepare canary changeset
         run: |
           rm -f .changeset/*.md || true
-          project_version=$(cat package.json | jq '.version' | tr -d '"')
-          echo The project version is: $project_version
-
-          # If still on v1, do a major bump, otherwise do a patch
-          if [[ $project_version == 1* ]]; then
-            echo "Creating major version bump changeset"
-            cat <<EOT >> .changeset/major-release-changeset.md
-          ---
-          '@sap-ai-sdk/ai-api': major
-          '@sap-ai-sdk/core': major
-          '@sap-ai-sdk/document-grounding': major
-          '@sap-ai-sdk/foundation-models': major
-          '@sap-ai-sdk/langchain': major
-          '@sap-ai-sdk/orchestration': major
-          '@sap-ai-sdk/prompt-registry': major
-          ---
-
-          Major version release
-          EOT
-          else
-            echo "Creating patch version bump changeset"
-            cat <<EOT >> .changeset/canary-release-changeset.md
+          cat <<EOT >> .changeset/canary-release-changeset.md
           ---
           '@sap-ai-sdk/core': patch
           ---
 
           Canary release
           EOT
-          fi
 
       - name: publish
         run: |
@@ -59,6 +37,6 @@ jobs:
           pnpm changeset pre enter ${date}
           pnpm changeset version
           pnpm changeset pre exit
-          pnpm changeset publish --tag ${{ github.event_name == 'schedule' && 'next' || inputs.tag }}
+          pnpm changeset publish --tag ${{ github.event_name == 'schedule' && 'canary' || inputs.tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPMJS_ACCESS_TOKEN }}
